# zero2prod

./: .env  Cargo.toml  configuration.yaml  init_db.sh
docker/: docker-compose.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_checks.rs
